# beancounttools

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  LICENSE.txt  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yaml
.github/workflows/: build-publish.yml
beancounttools/: __init__.py
beancounttools/importers/general/: csv.py  mt940importer.py
beancounttools/importers/transferwise/: importer.py
beancounttools/plugins/: check_no_mixed_investment_transactions.py  generate_base_ccy_prices.py
beancounttools/plugins/prices/: alphavantage.py  bitstamp.py  exchangeratesapi.py
docs/: conf.py  importers.rst  index.rst  installation.rst  plugins.rst  price_fetchers.rst  requirements.txt
src/tariochbctools/: __init__.py
src/tariochbctools/importers/awardwallet/: awardwallet_config.py  importer.py
src/tariochbctools/importers/awardwalletimp/: config.py  importer.py
src/tariochbctools/importers/bcge/: importer.py
src/tariochbctools/importers/bitst/: importer.py
src/tariochbctools/importers/blockchain/: importer.py
src/tariochbctools/importers/cembrastatement/: importer.py
src/tariochbctools/importers/general/: deduplication.py  mailAdapterImporter.py  mt940importer.py  priceLookup.py
src/tariochbctools/importers/ibkr/: importer.py
src/tariochbctools/importers/neon/: importer.py
src/tariochbctools/importers/netbenefits/: importer.py
src/tariochbctools/importers/nordigen/: importer.py  nordigen_config.py
src/tariochbctools/importers/postfinance/: importer.py
src/tariochbctools/importers/quickfile/: importer.py
src/tariochbctools/importers/radicant/: importer.py
src/tariochbctools/importers/raiffeisench/: importer.py
src/tariochbctools/importers/revolut/: importer.py
src/tariochbctools/importers/schedule/: importer.py
src/tariochbctools/importers/stocks/: importer.py
src/tariochbctools/importers/swisscard/: importer.py
src/tariochbctools/importers/transferwise/: importer.py
src/tariochbctools/importers/truelayer/: importer.py
src/tariochbctools/importers/viseca/: importer.py
src/tariochbctools/importers/woob/: importer.py
src/tariochbctools/importers/zak/: importer.py
src/tariochbctools/importers/zkb/: importer.py
src/tariochbctools/plugins/: __init__.py  check_portfolio_sum.py  generate_base_ccy_prices.py
src/tariochbctools/plugins/prices/: alphavantage.py  alphavantagefx.py  bitstamp.py  coinmarketcap.py  exchangeratesapi.py  ibkr.py  swisslife.py
tarioch.beancounttools/importers/zak/: importer.py
tariochbctools/: __init__.py
tariochbctools/importers/revolut/: importer.py
tariochbctools/importers/schedule/: importer.py
tariochbctools/importers/zkb/: importer.py
tests/: conftest.py
tests/tariochbctools/importers/: test_awardwallet.py  test_mt940importer.py  test_postfinance.py  test_quickfile.py  test_truelayer.py
tests/tariochbctools/plugins/: test_generate_base_ccy_prices.py
tests/tariochbctools/plugins/data/generate_base_ccy_prices/: entry_already_exists_expected.beancount  entry_already_exists_input.beancount  issue122_expected.beancount  issue122_input.beancount  missing_fx_expected.beancount  missing_fx_input.beancount  normal_expected.beancount  normal_input.beancount
